--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,21 @@ jobs:
             run: npm ci 
           - name: Run Test
             run: npm test
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Get code
+            uses: actions/checkout@v4
+          - name: Install Node Js
+            uses: actions/setup-node@v3
+            with:
+                node-version: 18
+          - name: Install dependencies
+            run: npm ci 
+          - name: Build project
+            run: npm run build
+          - name: Deploy
+            run: echo "Deploying"
 
                 
 
