deploy job depends on react-test job

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
           - name: Run Test
             run: npm test
     deploy:
+        needs: react-test
         runs-on: ubuntu-latest
         steps:
           - name: Get code
